--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
             padding-top: 4px;
             font-weight: bold;
         }
+
+        /* styles for nav search icon button */
+        button > svg {
+            width: 25px;
+            height: 25px;
+            color: #fff;
+        }
+
     </style>
 </head>
 <body>
@@ -105,7 +113,9 @@
 
                 <!-- nav search button -->
                 <label for="sign-in"></label>
-                <input type="button" id="sign-in">
+                <button type="button" id="sign-in"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                </svg></button>
             </div>
 
             <!-- nav sign-in Container -->
